--- a/app/ui/templates/claim-content.html
+++ b/app/ui/templates/claim-content.html
@@ -125,7 +125,7 @@
                                         {{@item.vehicleId.registrationNo}}
                                     </td>
                                     <td>
-                                        {{@item.ownerId.firstName.' '.@item.ownerId.lastName}}
+                                        {{@item.ownerId.fullName}}
                                     </td>
                                     <td>
                                         {{@item.insuranceId.name}}
