--- a/ui/templates/forgot.html
+++ b/ui/templates/forgot.html
@@ -50,10 +50,10 @@
         <div class="admin-form theme-info mw500" style="margin-top: 10%;" id="login">
           <div class="row mb15 table-layout">
 
-            <div class="col-xs-6 pln">
-              <a href="dashboard.html" title="Return to Dashboard">
-                <img src="app/ui/assets/img/logos/logo.png" title="AdminDesigns Logo" class="img-responsive w250">
-              </a>
+            <div class="col-xs-6 pln text-center" style="font-size: 45px;">
+               <a href="/" title="Return to Dashboard">
+                               MicClaims
+                            </a>
             </div>
 
             <div class="col-xs-6 va-b">
