--- a/ui/templates/front_layout.html
+++ b/ui/templates/front_layout.html
@@ -103,9 +103,9 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in hidden">This is a lead in statement!</div>
-                <div class="intro-heading">Our in house team creates <b>beautiful</b> designs to help your product succeed.</div>
-                <a href="#services" class="page-scroll btn btn-xl mr30 btn-primary">Learn More</a>
-                <a href="#contact" class="page-scroll btn btn-xl btn-wire">Contact Us</a>
+                <div class="intro-heading">This is just but a <b>font end</b> It shall be changes.</div>
+                <a href="{{@BASE}}/auth" class="page-scroll btn btn-xl mr30 btn-primary">Login</a>
+                <a href="{{@BASE}}/auth/register" class="page-scroll btn btn-xl btn-wire">Sign Up</a>
             </div>
         </div>
     </header>
