--- a/ui/templates/login.html
+++ b/ui/templates/login.html
@@ -46,9 +46,9 @@
                     <div class="admin-form theme-info mw500" id="login">
 
                         <!-- Login Logo -->
-                        <div class="row table-layout">
-                            <a href="dashboard.html" title="Return to Dashboard">
-                                <img src="app/ui/assets/img/logos/logo.png" title="Logo" class="center-block img-responsive" style="max-width: 275px;">
+                        <div class="row table-layout text-center" style="font-size: 45px;">
+                            <a href="/" title="Return to Dashboard">
+                               MicClaims
                             </a>
                         </div>
                         <!-- Errors -->
