--- a/ui/templates/register.html
+++ b/ui/templates/register.html
@@ -42,12 +42,12 @@
                 <!-- Begin: Content -->
                 <section id="content">
 
-                    <div class="admin-form theme-primary mw600" style="margin-top: 3%;" id="register">
+                    <div class="admin-form theme-primary mw600" style="margin-top: 0;" id="register">
 
                         <!-- Registration Logo -->
-                        <div class="row table-layout">
+                        <div class="row table-layout text-center" style="font-size: 45px;">
                             <a href="/" title="Return to Dashboard">
-                                <img src="app/ui/assets/img/logos/logo.png" title="AdminDesigns Logo" class="center-block img-responsive" style="max-width: 275px;">
+                               MicClaims
                             </a>
                         </div>
                         <div id="notification" class="alert alert-danger alert-dismissable hidden">
@@ -89,18 +89,13 @@
                                         </select>
                                     </div>
                                     <div class="section">
-                                        <div class="smart-widget sm-right smr-120">
-                                            <label for="username" class="field prepend-icon">
-                                                <input type="text" name="username" id="username" class="gui-input" placeholder="Choose your username/company name" title="use one name">
-                                                <label for="username" class="field-icon">
+                                        <label for="email" class="field prepend-icon">
+                                            <input type="text" name="username" id="username" class="gui-input" placeholder="Choose your username/company name" title="username">
+                                            <label for="username" class="field-icon">
                                                     <i class="fa fa-user">
                                                     </i>
                                                 </label>
-                                            </label>
-                                            <label for="username" class="button">
-                                                .{{@HOST}}
-                                            </label>
-                                        </div>
+                                        </label>
                                         <!-- end .smart-widget section -->
                                     </div>
                                     <!-- end section -->
