--- a/app/ui/templates/layout.html
+++ b/app/ui/templates/layout.html
@@ -2,56 +2,27 @@
 <html lang="en">
 <head>
 <base href="{{@SCHEME.'://'.@HOST.@BASE.'/'}}"/>
-<meta charset="{{@ENCODING}}">
+<meta charset="{{@$ENCODING}}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="ico/favicon.png">
-<title>fabulog backend - {{@CONFIG.blog_title}}</title>
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<link href="css/datepicker.css" rel="stylesheet">
-<link href="css/tagmanager.css" rel="stylesheet">
-<link href="css/backend.css" rel="stylesheet">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="shortcut icon" href="{{@UI}}ico/favicon.png">
+<title>{{@@page.title}}</title>
+<!-- Font CSS (Via CDN) -->
+<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'>
+<!-- Theme CSS -->
+<link rel="stylesheet" type="text/css" href="app/ui/assets/skin/default_skin/css/theme.css">
 </head>
 
-<body>
-<div class="navbar navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <!--<a class="navbar-brand" href="admin/">fabulog backend</a>--> 
-      <a class="navbar-brand" href="admin/"><img src="app/ui/images/fabulog-small.png"/></a> </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li {{(@PARAMS.0 == '/admin'?'class="active"':'') }}> <a href="admin/"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a> </li>
-        {*
-        <li {{(is_int(strpos(@PARAMS.0,'page'))?'class="active"':'')}}> <a href="admin/#">Pages</a> </li>
-        *}
-        <li {{(is_int(strpos(@PARAMS.0,'post'))?'class="active"':'')}}> <a href="admin/post"><i class="glyphicon glyphicon-align-left"></i> Posts</a> </li>
-        <li {{(is_int(strpos(@PARAMS.0,'comment'))?'class="active"':'')}}> <a href="admin/comment"> <i class="glyphicon glyphicon-comment"></i> Comments </a> </li>
-        <li {{(is_int(strpos(@PARAMS.0,'user'))?'class="active"':'')}}> <a href="admin/user"><i class="glyphicon glyphicon-user"></i> User</a> </li>
-        <li class="pull-right"><a href="logout" data-toggle="tooltip" data-placement="bottom" title="Logout"><i class="glyphicon glyphicon-off"></i></a></li>
-        <li class="pull-right"> <a href="admin/settings" data-toggle="tooltip" data-placement="bottom" title="Settings"><i class="glyphicon glyphicon-wrench"></i></a> </li>
-        <li class="pull-right"> <a href="{{@BASE}}" data-toggle="tooltip" data-placement="bottom" title="View&nbsp;Blog"><i class="glyphicon glyphicon-home"></i></a> </li>
-      </ul>
-    </div>
-    <!--/.nav-collapse --> 
-  </div>
+<body class="error-page sb-l-o sb-r-c">
+<div id="main">  
+  <!-- Begin: Content -->
+  <section id="content" class="pn animated fadeIn" style="margin-top: 50px;">
+    <div class="container" id="main"> <include if="{{@ERROR && @ERROR.code != 400}}" href="templates/error.html"/> <include if="{{isset(@SUBPART)}}" href="{{'templates/'.@SUBPART}}"/> </div>
+  </section>
+  <!-- End: Content --> 
 </div>
-<div class="container">
-  <div class="row"> <include if="{{isset(@LAYOUT)}}" href="{{'templates/'.@LAYOUT}}"/> </div>
-  <p class="stats">{{ \Base::instance()->format('Page rendered by fabulog v{0}, using {1} in {2} msecs / Memory usage {3} KB',@APP_VERSION,@CONFIG->ACTIVE_DB,round(1e3*(microtime(TRUE)-$TIME),2),round(memory_get_usage(TRUE)/1e3,1)) }}</p>
-</div>
-
-<!-- /.container --> 
-
-<!-- Bootstrap core JavaScript
-================================================== --> 
-<!-- Placed at the end of the document so the pages load faster --> 
-<script src="js/vendor/jquery.js"></script> 
-<script src="js/vendor/bootstrap.min.js"></script> 
-<script src="js/bootstrap-datepicker.js"></script> 
-<script src="js/typeahead.min.js"></script> 
-<script src="js/tagmanager.js"></script> 
-<script src="js/app.js"></script>
 </body>
 </html>
+
+
